<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="welcome">Welcome</string>
    <string name="bmi">TODO</string>
    <string name="vaccine">Vaccinated</string>
    <string name="DEATHS">DEATHS</string>
    <string name="CASES">CASES</string>
    <string name="Quizz">Quiz</string>
    <string name="result">Result</string>
    <string name="Calculate">Calculate</string>
    <string name="female">Female</string>
    <string name="male">male</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="bmr_calculator">BMR Calculator</string>
    <string name="button">Button</string>
    <string name="check_covid_stats">Check covid stats</string>
    <string name="score">Score:</string>
</resources>