<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".CovidChart">

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="536dp"
        android:layout_marginBottom="40dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-51dp" />

    <Button
        android:id="@+id/cases"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:text="@string/CASES" />

    <Button
        android:id="@+id/deaths"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-50dp"
        android:text="@string/DEATHS" />

    <Button
        android:id="@+id/vaccine"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="-50dp"
        android:text="@string/vaccine"
/>

</LinearLayout>